--- a/mobile_app/app/src/main/res/values/strings.xml
+++ b/mobile_app/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="menu_item4">Favorite</string>
     <string name="menu_item5">Profile</string>
     <!-- /Strings Menu Bottom Bar Navigation/ -->
-
+    <string name="menu_item1_top">"Today's special"</string>
     <string name="notification_badge">9</string>
 
 </resources>
