--- a/mobile_app/app/src/main/res/values/strings.xml
+++ b/mobile_app/app/src/main/res/values/strings.xml
@@ -27,5 +27,13 @@
     <string name="checkbox9">"No wheat"</string>
     <string name="search">"Search"</string>
 
+    <!-- Fragment 2 -->
+    <string name="food_category1">"Fruits"</string>
+    <string name="food_category2">"Vegetables"</string>
+    <string name="food_category3">"Protein"</string>
+    <string name="food_category4">"Dairy"</string>
+    <string name="food_category5">"Grains"</string>
+    <string name="food_category6">"Oils"</string>
+    <string name="button">"Add"</string>
 
 </resources>
