--- a/mobile_app/app/src/main/res/values/strings.xml
+++ b/mobile_app/app/src/main/res/values/strings.xml
@@ -38,6 +38,11 @@
 
     <!-- Fragment 5 -->
     <string name="profile">"Profile"</string>
+    <string name="greetings">"Welcome,"</string>
+    <string name="username">"Guest"</string>
+    <string name="status">"Login"</string>
+    <string name="retrieve_from_server">"Retrieve Data From Server"</string>
+    <string name="upload_to_server">"Upload Data To Server"</string>
 
     <!-- ViewDish -->
     <string name="cooking_instructions">Cooking instructions</string>
@@ -49,5 +54,20 @@
     <string name="quantity">Quantity</string>
     <string name="unit">Unit</string>
     <string name="add">Add</string>
+
+    <!-- Login -->
+    <string name="login_title">"Sign in"</string>
+    <string name="enter_username">"Username"</string>
+    <string name="enter_password">"Password"</string>
+    <string name="signin">"Sign In"</string>
+    <string name="to_signup">"Don't have an account? Sign up."</string>
+
+    <!-- Signup -->
+    <string name="signup_title">"Register"</string>
+    <string name="set_username">"Username"</string>
+    <string name="set_email">"Email"</string>
+    <string name="set_password">"Password"</string>
+    <string name="register">"Register"</string>
+    <string name="to_login">"Already have an account? Login."</string>
 
 </resources>
